--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
-        "phpoffice/phpword": "^0.17.0"
+        "phpoffice/phpword": "^0.17.0",
+        "renanbr/bibtex-parser": "^2.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
